--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -1,12 +1,13 @@
-== {productname} {payg} Limitations
+= {productname} {payg} limitations
 
-=== {byoslongform} instances already onboarded without SCC credentials
-To manage {byoslongform} ({byos}) instances of SUSE products in {productname} {payg} valid SCC credentials are needed. 
-This applies to all SUSE products except SUSE Manager Proxy {byos}. 
+== Onboarded {byos} instances without SCC credentials
+
+Valid SCC credentials are needed to manage {byoslongform} ({byos}) instances of SUSE products in {productname} {payg}. 
+This applies to all SUSE products except {productname} Proxy {byos}. 
 Without any SCC credentials, {productname} {payg} will not allow onboarding any of the mentioned {byos} instances.
 The user will get an error.
 
-There is a possibility that the user has valid SCC credentials set with already synced-up channels as well as {byos} onboarded, but at some point decides to delete those credentials. 
+There is a possibility that the user has valid SCC credentials set with already synced-up channels and the {byos} onboarded, but at some point decides to delete those credentials. 
 
 In the scenario of having already onboarded {byos} instances but no SCC credentials set, the following restrictions apply:
 
