remove trailing white space and fix typos

--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -1,9 +1,9 @@
 [[quickstart-suma-install-proxy]]
-= Quick Start SUMA Proxy 
+= Quick Start SUMA Proxy
 
 This guide shows you how to install and configure a single {susemgr} Proxy for x86-64 architecture from the SUSE Linux Enterprise installation media with the {unifiedinstaller}.
 
-For this topic we assume that you already have valid organization credentials with {scc} and have obtained a registration code for your {susemgr}i Proxy, for example from a "SUSE Manager Lifecycle Management+" subscription.
+For this topic we assume that you already have valid organization credentials with {scc} and have obtained a registration code for your {susemgr} Proxy, for example from a "SUSE Manager Lifecycle Management+" subscription.
 
 
 //== Software and Hardware Requirements
@@ -29,8 +29,7 @@ This guide shows you how to install and configure a single {susemgr} Proxy for x
 +
 image::unifiedinstaller-proxy.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
-. In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentii
-als, and click btn:[Next].
+. In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
 . In the [guimenu]``Available Extensions and Modules`` screen, select any extensions or modules you require, and click btn:[Next].
     [systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandatory for the {productname} Proxy installation.
     OPTIONAL: In the following [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
