remove mgr-cfg tools, trad. client only
https://github.com/uyuni-project/uyuni/issues/7889
https://github.com/SUSE/spacewalk/issues/18879

--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -5,12 +5,6 @@ There are several command line tools available in {productname}.
 Every action that can be completed using the {webui} can be performed at a command prompt instead.
 Additionally, there are some actions that can only be performed at the command prompt.
 
-Manage configuration with:
-
-* ``mgrcfg-manager``
-* ``mgrcfg-client``
-* ``mgr-actions-control``
-
 Manage package and channel synchronization with:
 
 * ``spacewalk-repo-sync``
@@ -40,6 +34,7 @@ To install a command line tool, you can use the {productname} {webui}, or use yo
 
 .Procedure: Installing Command Line Tools from the Command Prompt
 // I tried this on my test install, and it worked on the client, but not the server. What's the server version? --LKB 2020-10-08
+// On the server, either api/spacewalk or salt probablycan be used, I think --ke 2023-11-28
 . On the client that you want to install the packages on, at the command prompt, as root, use zypper to install the package:
 +
 ----
