--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -3,38 +3,42 @@ This section covers initial preparation and configuration of the image on {azure
 
 .Procedure: Configuring your {productname} instance
 
-. Select the AMI image and provide a meaningful **name** for your server.
-  Review the details and pricing information provided. 
+. Start by logging into your Azure account at Azure Portal.
 
-. You have the option to configure additional instance details in subsequent steps, such as storage, tags, security groups, and the required **IAM role**.
+. In the Azure Portal, find the menu:[Virtual Machines] section. This can be done either through the **dashboard** or by using the **search bar**.
 
-.. The image automatically suggests a **default CPU configuration**.
+. Select menu:[Create a resource] in the top left corner of the portal.
 
-.. Choose an existing key pair or create a new one to grant access to the instance.
+. Choose menu:[Compute] and then select menu:[Virtual Machine].
 
-.. Your organization should provide the necessary security groups and network configuration.
+. You will be guided through the **Create a virtual machine** process.
 
-.. If an IAM role has been previously created, you can attach it by selecting it from the Existing menu:IAM role[] dropdown. Otherwise, attach this role after the instance has been launched.
+. Fill in the required details such as subscription, resource group, and VM name.
 
-.. Create the following partitions
+. Choose a region for your VM. Ensure it complies with any geo-fencing policies you might have.
+
+. In the **Image** dropdown, select the **manager-server-4-3-ltd** or the **manager-server-4-3-llc** image for your VM. If the image is not listed, select **Browse all public and private images** to find the required image.
+ 
+ . Suggested sizes are selected by default for this VM. Configure optional features such as virtual CPUs, memory as required.
+
+. Set up an administrator account for the VM. For {sles}, this can be a username and SSH public key.
+
+. Ensure the VM is connected to the appropriate virtual network (VNet) and subnet, especially if it needs to communicate with other specific services like {productname}.
+For network requirements, see: xref:public-cloud-guide/payg/azure/payg-azure-server-setup.adoc[Azure Server Setup: Network Configuration]
+
+. Configure additional settings such as storage, monitoring, or any extensions you may need. The following partitions are created by default when initializing the {azure} image:
 
 * **200 GB** for the root partition
  
 * **500 GB** for spacewalk storage
  
 * **80 GB** for the database. 
-+
-For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 
-.. Follow the prompts from AWS to complete the configuration as needed.
+. Once all configurations are set, review the settings.
 
-. After reviewing your configuration click the btn:[Launch instance] dropdown.
+. Click "Create" to deploy your VM.
 
-. Click on the btn:[Launch Instances] button.
-
-. You will be redirected to the **EC2** Dashboard.
-
-. Verify that the instance has successfully launched by selecting menu:Instances[] on the left sidebar. The {productname} {payg} instance should be running in the main content area.
+. After the VM is deployed, you can access it via SSH.
 
 [NOTE] 
 .Usage and Costs
