--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -5,29 +5,21 @@ You can also review the latest available images for the public cloud using Pint(
 
 See: link:https://pint.suse.com/[pint.suse.com]
 
+There are currently two offers for {productname} {payg} on {azure}:
+
+// Check if these are the correct names for public consumption or if they are test servers
+* **manager-server-4-3-ltd**
+* **manager-server-4-3-llc**
 
 .Procedure: Obtaining the {productname} {payg} image on {azure}
+. Start by logging into your Azure account at Azure Portal.
 
-. In your browser navigate to the link:https://portal.azure.com[Azure Portal].
+. Once logged in, navigate to the **Virtual Machines** section. This can be found in the dashboard or by using the search bar at the top of the Azure Portal.
 
-. Enter your Azure credentials and log in.
+. Click on **Create a Virtual Machine.** Here, you will be asked to fill in details such as the subscription, resource group, and virtual machine name.
 
-. From the {azure} Management Console dashboard, locate the menu:Services[] dropdown.
+. During the creation of a virtual machine there is an option for **Image.** Select the correct  cloud image for your VM. 
 
-. From the menu select menu:EC2[] under the **Compute** section.
+. If you don't find the image you need, you can browse the Azure Marketplace. Click on **See all images** or go to the **Marketplace** and search for the image you need. 
 
-. In the {azure} dashboard, in the main content section, you'll find the btn:[Launch Instance] button. Click it.
-
-. From the **Choose an Amazon Machine Image (AMI)** page. 
-Select **Browse more AMIs**
-
-. Search for **SUSE Manager**
-
-. Depending on your location select your AMI image. 
-
-* **SUSE Manager Server Family (EU and UK only)**
-* **SUSE Manager Server Family (non-EU and non-UK-only)**.
-
-. Click btn:[Select].
-
-. Proceed for image configuration.
+. After selecting your image, continue with the configuration of your virtual machine. Review all settings, and then create your VM.
