--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -1,5 +1,7 @@
 = Azure System Requirements
-When setting up a SUSE Manager {payg} instance on {azure}, it's essential to consider system requirements for optimal performance and functionality. The default requirements outlined below have been tailored for smooth deployment and operation. 
+When setting up a SUSE Manager {payg} instance on {azure}, it's essential to consider system requirements for optimal performance and functionality. The default requirements outlined below have been tailored for smooth deployment and operation.
+
+By default, certain disks are automatically generated when establishing a {productname} {payg} instance on {azure}. To complete the setup of these disks, use the **suma-storage** tool.
 
 .Azure System Requirements
 [cols="2,1"]
@@ -25,7 +27,3 @@ When setting up a SUSE Manager {payg} instance on {azure}, it's essential to con
 | Typically configured by your organization
 
 |===
-
-// Add note on DNS configuration either a custom dns or add an amazon DNS server to ensure lookup and reverse lookup addresses are the same.
-== Network
-
