--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -3,7 +3,7 @@
 
 == Requirements
 
-{productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc[Public Cloud Images].
+{productname} must be setup and running on {azure}. For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[Azure Public Cloud Images].
 
 
 .The instance-flavor-check tool and {payg} schedule check 
@@ -20,12 +20,11 @@ Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** t
 == Login to the Webui
 
 .Procedure: Login
-
+// Needs to be updated for azure ask Michael Calmer
 . Login to the SUSE Manager Server WebUI.
-The username is **admin** the password will be the **Instance ID** on AWS EC2.
+//The username is [FILL THIS IN] the password will be the [FILL THIS IN] on {azure}.
 
 . Select menu:Admin[Setup Wizard].
-
 
 == Configure the {payg} credentials and product list
 
