--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -238,9 +238,8 @@ mkdir -p /usr/local/centos
 cd /usr/local/centos
 rm *.xml
 wget -c http://cefs.steve-meier.de/errata.latest.xml
-#wget -c https://www.redhat.com/security/data/oval/com.redhat.rhsa-all.xml
-wget -c https://www.redhat.com/security/data/oval/com.redhat.rhsa-RHEL7.xml.bz2
-bzip2 -d com.redhat.rhsa-RHEL7.xml.bz2
+wget -c https://www.redhat.com/security/data/oval/v2/RHEL7/rhel-7.oval.xml.bz2
+bzip2 -d rhel-7.oval.xml.bz2
 wget -c http://cefs.steve-meier.de/errata-import.tar
 tar xvf errata-import.tar
 chmod +x /usr/local/centos/errata-import.pl
@@ -248,7 +247,7 @@ export SPACEWALK_USER='<adminname>';export SPACEWALK_PASS='<password>'
 /usr/local/centos/errata-import.pl --server '<servername>' \
 --errata /usr/local/centos/errata.latest.xml  \
 --include-channels=centos7-updates-x86_64,centos7-x86_64,centos7-extras-x86_64 \
---publish --rhsa-oval /usr/local/centos/com.redhat.rhsa-RHEL7.xml
+--publish --rhsa-oval /usr/local/centos/rhel-7.oval.xml
 ----
 . Set up a cron job to run the script daily:
 +
