--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -24,7 +24,7 @@ This section covers initial preparation and configuration of the image on {azure
 . Set up an administrator account for the VM. For {sles}, this can be a username and SSH public key.
 
 . Ensure the VM is connected to the appropriate virtual network (VNet) and subnet, especially if it needs to communicate with other specific services like {productname}.
-For network requirements, see: xref:public-cloud-guide/payg/azure/payg-azure-server-setup.adoc[Azure Server Setup: Network Configuration]
+For network requirements, see xref:specialized-guides:public-cloud-guide/payg/azure/payg-azure-server-setup.adoc[Azure Server Setup: Network Configuration].
 
 . Configure additional settings such as storage, monitoring, or any extensions you may need. The following partitions are created by default when initializing the {azure} image:
 
