--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -20,9 +20,9 @@ Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** t
 == Login to the Webui
 
 .Procedure: Login
-// Needs to be updated for azure ask Michael Calmer
-. Login to the SUSE Manager Server WebUI.
-//The username is [FILL THIS IN] the password will be the [FILL THIS IN] on {azure}.
+. Login to the {productname} Server {webui}.
+  The username is [literal]``admin`` while the password is the name of the instance with [literal]``-suma`` appended.
+  When the name of the instance is [literal]``suma-payg-mycompany``, the password is ``suma-payg-mycompany-suma``.
 
 . Select menu:Admin[Setup Wizard].
 
@@ -56,7 +56,3 @@ Ubuntu and Debian are not currently supported by our RMT servers.
 
 For more information, see xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration].
 ====
-
-
-
-
