new network required
per feedback

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -13,9 +13,23 @@ zypper refresh
 zypper update
 ----
 
+
+
 == Network Configuration
 
 Before initiating `yast2 susemanager_setup`, ensure the network is correctly configured for {azure}.
+
+// (Azure requirement, not ours).
+For {productname} {payg} setup it is required, that a new Virtual Network and a new subnet is configured.
+It is impossible to setup the instance in an existing network.
+When you setup new clients which should be managed, take care that you put them into the private subnet which is configured with {productname} {payg}.
+
+
+[NOTE]
+====
+If you want to manage systems in an already existing network, you must configure **peering**.
+====
+
 
 .Procedure: Network Configuration
 . Ensure the network configuration aligns such that `hostname -f` yields the identical name as the reverse DNS lookup of the private IP address. For instance, when executing `nslookup 10.0.0.X`.
