Fixed outdated link.

--- a/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
+++ b/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
@@ -8,7 +8,7 @@ You cannot create an SAP cluster without the {sles} SAP extension, as it provide
 One of the key features of SAP is high availability of the cluster.
 Every component within an SAP cluster has redundancy and failover protection.
 When you are preparing your clients, ensure you have enough hardware and infrastructure to allow for this.
-For more information about hardware requirements, see https://documentation.suse.com/sles-sap/15-SP2/html/SLES-SAP-quick/cha-plan.html#sec-hardware[].
+For more information about hardware requirements, see https://documentation.suse.com/sles-sap/15-SP4/html/SLES-SAP-installation/cha-plan.html#sec-hardware
 
 For more information about the clients you need to set up for an SAP cluster, see https://documentation.suse.com/sbp/all[].
 
