--- a/modules/client-configuration/pages/contact-methods-pushssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-pushssh.adoc
@@ -2,7 +2,7 @@
 = Push via SSH
 
 
-Push via SSH is used in environments where traditional clients cannot reach the {productname} Server directly.
+Push via SSH is used in environments where clients cannot reach the {productname} Server directly.
 In this environment, clients are located in a firewall-protected zone called a DMZ.
 No system within the DMZ is authorized to open a connection to the internal network, including the {productname} Server.
 
