--- a/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
@@ -59,7 +59,7 @@ Content Lifecycle Management (CLM):
   Enter [guimenu]``Name`` and [guimenu]``Label``.
 * Attach Source to the project.
   Use the needed vendor channels and the custom channel.  (sharing example using CentOS8)
-* Add environment into the Project.  For example use CentOS8.
+* Add environment into the Project.  For example, use CentOS8.
 * To build the environment click the btn:[Build] button.
   This creates an environment with vendor and custom channels that can be associated with an activation key and used to bootstrap the client.
 . Important note: In the CLM project, it is recommend to add a filter, which excludes the problematic or conflicting packages.
