--- a/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
@@ -74,7 +74,7 @@ ifeval::[{suma-content} == true]
 [NOTE]
 ====
 Using the Extra Packages for Enterprise Linux (EPEL) directly on {rhel} clients (or compatible: {sll}, {centos}, {oracle}, etc) will install the {salt} packages from EPEL, which miss some features available in the {productname}-provided {salt} packages. 
-This is especially important since it will result in the bootstrap repository containing the non-SUSE {salt} packages. 
+This is especially important because it will result in a bootstrap repository containing the non-SUSE {salt} packages. 
 Therefore, this is an unsupported scenario.
 
 If you need to enable the EPEL repository, make sure you filter out the {salt} packages from EPEL in advance (for example, by removing the {salt} packages in menu:Software[Manage > Channels > EPEL > Packages].
