--- a/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
@@ -73,7 +73,7 @@ Content Lifecycle Management (CLM):
 ifeval::[{suma-content} == true]
 [NOTE]
 ====
-Using the Extra Packages for Enterprise Linux (EPEL) directly on {rhel} clients (or compatible: {sll}, {centos}, {oracle}, etc) will install the {salt} packages from EPEL, which miss some features available in the {productname}-provided {salt} packages. 
+Using the Extra Packages for Enterprise Linux (EPEL) directly on {rhel} clients (or compatible: {sll}, {centos}, {oracle}, etc.) will install the {salt} packages from EPEL, which miss some features available in the {productname}-provided {salt} packages. 
 This is especially important because it will result in a bootstrap repository containing the non-SUSE {salt} packages. 
 Therefore, this is an unsupported scenario.
 
