Converted old release note to content. (#2652)
* Converted old release note to content.

* Update modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
@@ -58,8 +58,8 @@ Content Lifecycle Management (CLM):
 * In the {productname} {webui}, navigate to menu:Content Lifecycle[], and click btn:[Create Project].
   Enter [guimenu]``Name`` and [guimenu]``Label``.
 * Attach Source to the project.
-  Use the needed vendor channels and the custom channel.  // (sharing example using CentOS8)
-* Add environment into the Project.  // example using CentOS8
+  Use the needed vendor channels and the custom channel.  (sharing example using CentOS8)
+* Add environment into the Project.  For example, use CentOS8.
 * To build the environment click the btn:[Build] button.
   This creates an environment with vendor and custom channels that can be associated with an activation key and used to bootstrap the client.
 . Important note: In the CLM project, it is recommend to add a filter, which excludes the problematic or conflicting packages.
@@ -69,4 +69,14 @@ Content Lifecycle Management (CLM):
   This is needed to re-built the environment.
 
 * For more information about CLM, see xref:administration:content-lifecycle.adoc[].
-* For another workaround, see https://www.suse.com/releasenotes/x86_64/SUSE-MANAGER/4.2/index.html#_epel_and_salt_packages.
+
+ifeval::[{suma-content} == true]
+[NOTE]
+====
+Using the Extra Packages for Enterprise Linux (EPEL) directly on {rhel} clients (or compatible: {sll}, {centos}, {oracle}, etc.) will install the {salt} packages from EPEL, which miss some features available in the {productname}-provided {salt} packages. 
+This is especially important because it will result in a bootstrap repository containing the non-SUSE {salt} packages. 
+Therefore, this is an unsupported scenario.
+
+If you need to enable the EPEL repository, make sure you filter out the {salt} packages from EPEL in advance (for example, by removing the {salt} packages in menu:Software[Manage > Channels > EPEL > Packages].
+====
+endif::[]
