Changed Tip to Note due to styling discrepancy.

--- a/modules/reference/pages/spacecmd/activationkey.adoc
+++ b/modules/reference/pages/spacecmd/activationkey.adoc
@@ -431,7 +431,7 @@ usage: activationkey_setbasechannel KEY <usage limit>
 usage: activationkey_setbasechannel KEY unlimited
 --
 
-[TIP]
+[NOTE]
 ====
 Usage limits are only applicable to traditionally managed systems.
 Currently usage limits do not apply to Salt or foreign managed systems.
