43- Changed Tip to Note due to styling discrepancy.

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -159,9 +159,9 @@ After adding the channel, {productname} will schedule the channel to be synchron
 This can take a long time as {productname} will copy channel software sources from the {suse} repositories located at {scc} to local [path]``/var/spacewalk/`` directory of your server.
 
 
-[TIP]
-.PostgreSQL and Transparent Huge Pages
+[NOTE]
 ====
+//.PostgreSQL and Transparent Huge Pages
 In some environments, _Transparent Huge Pages_ provided by the kernel may slow down PostgreSQL workloads significantly.
 
 To disable _Transparant Huge Pages_ set the [option]``transparent_hugepage`` kernel parameter to [option]``never``.
