Azure payg jcayouette (#2645)
* azure addition to payg
* Update modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
* Update modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
* Update modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
* Update modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -3,7 +3,7 @@
 
 == Requirements
 
-{productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/payg-public-cloud-images.adoc[Public Cloud Images].
+{productname} must be setup and running on {azure}. For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[Azure Public Cloud Images].
 
 
 .The instance-flavor-check tool and {payg} schedule check 
@@ -20,12 +20,11 @@ Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** t
 == Login to the Webui
 
 .Procedure: Login
-
-. Login to the SUSE Manager Server WebUI.
-The username is **admin** the password will be the **Instance ID** on AWS EC2.
+. Login to the {productname} Server {webui}.
+  The username is [literal]``admin`` while the password is the name of the instance with [literal]``-suma`` appended.
+  When the name of the instance is [literal]``suma-payg-mycompany``, the password is ``suma-payg-mycompany-suma``.
 
 . Select menu:Admin[Setup Wizard].
-
 
 == Configure the {payg} credentials and product list
 
@@ -55,9 +54,5 @@ Ubuntu and Debian are not currently supported by our RMT servers.
 .Red Hat Linux Enterprise Clients
 {productname} offers support for {rhel} clients; however it is important to note that content still needs to be added manually and is not available through the cloud-based RMT service.
 
-For more information see: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration].
+For more information, see xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration].
 ====
-
-
-
-
