--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -31,7 +31,7 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ifeval::[{suma-content} == true]
-**** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
+**** xref:install-vm.adoc[Install Server Using Virtual Machine Image]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
