fix adoc syntax in SLL section (#3111)
* fix adoc syntax
partial backport of #3083 (per feedback)

--- a/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
@@ -278,12 +278,12 @@ This method makes use of the bootstrap script created above for onboarding new s
 
 . In the {productname} {webui}, open the System Details page of any registered client you want to migrate to {sll}.
 
-. Click the [guimenu]`Reactivation`` tab.
+. Click the [guimenu]``Reactivation`` tab.
   If there is already a key listed, you can use it.
   If not, click btn:[Generate New Key], and copy the entire key.
   The key will start with [literal]``re-``.
 
-. SSH into this client and set the environmant variable to be the key that you copied:
+. SSH into this client and set the environment variable to be the key that you copied:
 
 ----
 export REACTIVATION_KEY=re-xxxxxxxxxxxxxx
