Updated CLM examples for RHEL9 (#3112)

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -228,7 +228,7 @@ All packages installed during the year match the current live patching kernel fi
 [#appstream-filters]
 == AppStream Filters
 
-If you are using {rhel}{nbsp}8 clients, you cannot perform package operations such as installing or upgrading directly from modular repositories like the {rhel} AppStream repository.
+If you are using {rhel}{nbsp}8 clients or later, you cannot perform package operations such as installing or upgrading directly from modular repositories like the {rhel} AppStream repository.
 You can use the AppStream filter to transform modular repositories into regular repositories.
 It does this by keeping the packages in the repository and stripping away the module metadata.
 The resulting repository can be used in {productname} in the same way as a regular repository.
@@ -244,13 +244,13 @@ To do so, add an AppStream filter using the matcher [parameter]``none (disable m
 This will disable all the modules in the target repository.
 This is especially useful for {rhel}{nbsp}9 clients, where the default versions of most modules are already included in the AppStream repository as regular packages.
 
-To use the AppStream filter, you need a CLM project with a modular repository such as ``{rhel} AppStream``.
+To use the AppStream filter, you need a CLM project with a modular repository such as ``{rhel} AppStreams``.
 Ensure that you included the module you need as a source before you begin.
 
 
 
 .Procedure: Using AppStream Filters
-. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 CLM project.
+. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 or 9 CLM project.
     Ensure that you have included the AppStream channels for your project.
 . Click btn:``Create Filter`` and use these parameters:
 +
@@ -270,7 +270,7 @@ Ensure that you included the module you need as a source before you begin.
 You can use the browse function in the ``Create/Edit Filter`` form to select a module from a list of available module streams for a modular channel.
 
 .Procedure: Browsing Available Module Streams
-. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 CLM project.
+. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 or 9 CLM project.
     Ensure that you have included the AppStream channels for your project.
 . Click btn:``Create Filter`` and use these parameters:
 +
@@ -302,9 +302,9 @@ invalid.
 ====
 
 .Procedure: Disabling Modularity
-. In the {productname} {webui}, navigate to your {rhel}{nbsp}9 CLM project.
+. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 or 9 CLM project.
     Ensure that you have included the AppStream channels for your project.
-. Click btn:``Create Filter`` and use these parameters:
+. Click btn:[Create Filter] and use these parameters:
 +
 * In the [guimenu]``Filter Name`` field, type a name for the new filter.
 * In the [guimenu]``Filter Type`` field, select [parameter]``Module (Stream)``.
@@ -322,6 +322,7 @@ When you build your CLM project using the btn:[Build] button in the {webui}, the
 Disabling modularity altogether in {rhel}{nbsp}8 projects might result in a faulty environment as some modules are essential for healthy operation in {rhel}{nbsp}8.
 ====
 
+// For 4.3 only:
 // This feature is mandatory to make RHEL/CentOS 8 modular repositories work
 // in the SUMA UI. Otherwise, even though modular repositories can be synced
 // and assigned to clients, they cannot be used for package operations
