Add SUSE Liberty Linux 7 LTSS information (#3119) (#3123)
* Add SUSE Liberty Linux 7 LTSS information (#3119)
Fixes https://github.com/SUSE/spacewalk/issues/24630
Signed-off-by: Dominik Gedon <dominik.gedon@suse.com>
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
@@ -45,6 +45,7 @@ To provide all the software channels for {sll} on the {productname} Server, proc
 . Select the {sll} Channels that you will use:
 +
 
+* EL7 LTSS: `SUSE Linux Enterprise Server with Expanded Support LTSS 7 x86_64`
 * EL7: `SUSE Linux Enterprise Server with Expanded Support 7 x86_64`
 * EL8: `RHEL or SLES ES or CentOS 8 Base`
 * EL9: `RHEL and Liberty 9 Base`
@@ -76,6 +77,7 @@ Base Channel::
 Select one base channel:
 +
 
+* EL7 LTSS: `RES-7-LTSS-Updates for x86_64`
 * EL7: `RHEL x86_64 Server 7`
 * EL8: `RHEL8-Pool for x86_64`
 * EL9: `EL9-Pool for x86_64`
