--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -88,6 +88,12 @@ The products you need for this procedure are:
 | {sll} 7
 | SUSE Linux Enterprise Server with Expanded Support 7 x86_64
 
+| {sll} LTSS 7
+| SUSE Linux Enterprise Server with Expanded Support LTSS 7 x86_64
+
+| {sll} LTSS for Oracle 7
+| SUSE Linux Enterprise Server with Expanded Support LTSS for Oracle 7 x86_64
+
 | {sll} 8
 | RHEL or SLES ES or CentOS 8 Base and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
 
@@ -105,7 +111,9 @@ This procedure creates these tools channels:
 .ES Tools Channels
 |===
 
-| OS Version | Base Channel                     | Tools Channel
+| OS Version   | Base Channel                     | Tools Channel
+| {sll} LTSS 7 | RHEL Expanded Support LTSS 7 | RES-7-SUSE-Manager-Tools for x86_64 LBT7
+| {sll} LTSS for Oracle 7 | RHEL Expanded Support LTSS for Oracle 7 | RES-7-SUSE-Manager-Tools for x86_64 LBTOL7
 | {sll} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
 | {sll} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
 | {sll} 9     | RHEL and Liberty 9 Base          | EL9-Manager-Tools-Pool for x86_64 and EL9-Manager-Tools-Updates for x86_64
@@ -136,6 +144,16 @@ ifeval::[{suma-content} == true]
 | rhel-x86_64-server-7
 | -
 | res7-suse-manager-tools-x86_64
+
+| {sll} LTSS 7
+| res-7-ltss-updates-x86_64
+| -
+| res-7-suse-manager-tools-x86_64-lbt7
+
+| {sll} LTSS for Oracle 7
+| res-7-ol-ltss-updates-x86_64
+| -
+| res-7-suse-manager-tools-x86_64-lbtol7
 
 | {sll} 8
 | rhel8-pool-x86_64
