Updated lists of SUSE Linux Enterprise hardening profiles in openSCAP (#3114) (#3124) (#3128)
* Updated lists of SUSE Linux Enterprise hardening profiles in openSCAP (#3114) (#3124)

https://github.com/SUSE/spacewalk/issues/24627
https://jira.suse.com/browse/DOCTEAM-1428
Co-authored-by: Ornela Marić <omaric@suse.com>
per feedback - https://github.com/uyuni-project/uyuni-docs/pull/3114

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -74,10 +74,15 @@ You are advised to use the [package]``scap-security-guide-redhat`` package you w
 In the current version of [package]``scap-security-guide``, {suse} supports the following profiles:
 
 * DISA STIG profile for {sles} 12 and 15
+* ANSSI-BP-028 profile for {sles} 12 and 15
 * PCI-DSS profile for {sles} 12 and 15
-* HIPAA profile for {sles} 12 and 15
+* HIPAA profile for {sles} 15
+* CIS profile for {sles} 12 and 15
+* Hardening for Public Cloud Image of {sles} for SAP Applications 15
+* Public Cloud Hardening for {sle} 15
+* Standard System Security profile for SLE 12 and 15
 
-Other profiles, like the CIS profile, are community supplied and not officially supported by {suse}.
+Any other profile out of this lists are community supplied and not officially supported by {suse}.
 
 For Non-{suse} operating systems the included profiles are community supplied.
 They are not officially supported by {suse}.
