fix asciidoc syntax (per feedback) (#3142)
https://github.com/uyuni-project/uyuni-docs/issues/3085

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -261,7 +261,7 @@ This sections describes VMWare configurations, focusing on the creation of an ex
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit). 
 
-. In menu:[Customize settings] browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
+. In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
 
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more)
 
