cleanup asciidoc deco and fix vmware spelling (#3151)
maybe, it will help with segmentation and translations.
See https://github.com/uyuni-project/uyuni-docs/issues/2969

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -249,9 +249,9 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
   Log in using credentials set by configuration disk.
 
 
-== {productname} Virtual Machine Settings - VMWare
+== {productname} Virtual Machine Settings - VMware
 
-This sections describes VMWare configurations, focusing on the creation of an extra virtual disk essential for the {productname} storage partition within VMWare environments.
+This sections describes VMware configurations, focusing on the creation of an extra virtual disk essential for the {productname} storage partition within VMware environments.
 
 .Procedure: Creating the VMware Virtual Machine
 
@@ -259,19 +259,19 @@ This sections describes VMWare configurations, focusing on the creation of an ex
 
 . Upload the prepared Ignition or Cloud Init disk file you created using the instructions above.
 
-. Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit). 
+. Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
 
 . In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
 
-. Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more)
+. Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
 
 . Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
 
 . Set the network adapter as required.
 
 . Set the [systemitem]``CD/DVD Drive 1`` to use the uploaded configuration as a [systemitem]``Datastore ISO``.
-Tick the box next to btn:[Connect]. 
-This drive must be present when you power on the machine initially.
+  Tick the box next to btn:[Connect].
+  This drive must be present when you power on the machine initially.
 
 . Power on the VM, and log in using credentials set by configuration disk.
 
