Document signing of Git Commits

--- a/README.adoc
+++ b/README.adoc
@@ -138,6 +138,10 @@ It also contains project planning information.
 
 To contribute to Uyuni documentation:
 
+.Procedure: Configure Git commit signing (if needed)
+. Signing commits with a GPG/SSH key is mandatory for contributing. That way your commits will be marked as verified on GitHub so other people can be confident that the changes come from a trusted source.
+. If you are not doing it already, check out the https://docs.github.com/en/authentication/managing-commit-signature-verification/about-commit-signature-verification[GitHub documentation].
+
 .Procedure: Contributing Using a Fork
 . Make sure you have a [github](github.com) account, and that you a`re signed in.
 . Navigate to the [Uyuni Documentation Repo](https://github.com/uyuni-project/uyuni-docs.git), click the `Fork` button in the top-right corner, and select the account you want to use.
