add link to more details about partitioning (#3180)
https://github.com/SUSE/spacewalk/issues/24683

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -24,7 +24,7 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 Repository synchronization fails if this directory runs out of disk space.
 You can estimate how much space the [path]``/var/spacewalk/`` directory requires based on the clients and repositories you plan to mirror.
 
-
+For more information about filesystem and partitioning details, see xref:installation-and-upgrade:hardware-requirements.adoc#install-hardware-requirements-storage[].
 
 [cols="1,1,1", options="header"]
 .Server Hardware Requirements for {x86_64} Architecture
@@ -189,6 +189,7 @@ As a result of this behavior:
 
 
 
+[[install-hardware-requirements-storage]]
 == Storage Devices and Permissions
 
 We recommend that the repositories and the database for {productname} are stored on separate storage devices.
